[package]
name = "smcu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
ed25519-dalek = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
bs58 = "0.4"
log = "0.4"

[dev-dependencies]
simple_logger = "*"